@@ -117,3 +117,6 @@
 * Version 0.13.2
 	- improve system tray support
 	- improve the save dialog
+	- updated the traditional chinese translation
+	- added the lithuanian translation
+
